# python_lib_skel_1

./: LICENSE  README.md  setup.cfg
example/: test.py
src/pylib_ex/: __init__.py  __meta__.py
src/pylib_ex/pkg1/: __init__.py  feature_2.py
