[metadata]
name = pylib_ex
version = attr: src.pylib_ex.__meta__.__VERSION__
description = bla bla
;long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = MIT
classifiers =
    Framework :: private lib
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
;include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    requests
    docutils >= 0.3
    importlib-metadata>=0.22;python_version < "3.9"
python_requires = >=3.8

[options.packages.find]
where = src
;exclude =
;    src.subpackage1
;    src.subpackage2

;[options.package_data]
;* = *.txt, *.rst
;hello = *.msg

;[options.entry_points]
;console_scripts =
;    executable-name = package.module:function

;[options.extras_require]
;pdf = ReportLab>=1.2; RXP
;rest = docutils>=0.3; pack ==1.1, ==1.3


;[options.data_files]
;/etc/my_package =
;    site.d/00_default.conf
;    host.d/00_default.conf
;data = data/img/logo.png, data/svg/icon.svg
;fonts = data/fonts/*.ttf, data/fonts/*.otf